SCA-2313 Parallel test stability improvements